fix height overflow issue in lower resolutions

--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,7 +1,5 @@
 .main_container {
     display: flex;
-    min-height: 100vh;
-    flex: 1;
     margin: 0;
     padding: 0;
     color: white;
